<resources>
    <string name="app_name" translatable="false">DartsCount</string>
    <string name="numberToCount" translatable="false">D20</string>
    <string name="title_activity_main23" translatable="false">MainActivity23</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">NEXT</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="gameover">GameOver</string>
    <string name="total_correct_answers">Your score:</string>
    <string name="app_title">Darts Count</string>
    <string name="startButton_settings">START</string>
    <string name="close_popup">CLOSE</string>
    <string name="game_mode_1_title">Training mode 1</string>
    <string name="game_mode_2_title">Training mode 2</string>
    <string name="best_score">Best Score</string>
    <string name="gameTime_1">1 min</string>
    <string name="gameTime_2">3 min</string>
    <string name="gameTime_3">5 min</string>
    <string name="scoreToCount">501</string>
    <string name="info_mode_1">Add up all the throws in the fastest possible speed.</string>
    <string name="info_mode_2">Add up all the throws and subtract them from your counter.</string>
    <string name="select_game_mode">Select the level of play:</string>
    <string name="select_game_time">Select game time:</string>
    <string name="game_setting_layout_title">Training Setting</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="game_mode_3_title">BEST LEG ENDING</string>

    <string-array name="gameModes">
        <item>One Throw (EASY)</item>
        <item>Two Throws (MEDIUM)</item>
        <item>Three Throws (HARD)</item>
    </string-array>

    <string-array name="allThrows">
        <item>-</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>25</item>
        <item>D1</item>
        <item>D2</item>
        <item>D3</item>
        <item>D4</item>
        <item>D5</item>
        <item>D6</item>
        <item>D7</item>
        <item>D8</item>
        <item>D9</item>
        <item>D10</item>
        <item>D11</item>
        <item>D12</item>
        <item>D13</item>
        <item>D14</item>
        <item>D15</item>
        <item>D16</item>
        <item>D17</item>
        <item>D18</item>
        <item>D19</item>
        <item>D20</item>
        <item>D25</item>
        <item>T1</item>
        <item>T2</item>
        <item>T3</item>
        <item>T4</item>
        <item>T5</item>
        <item>T6</item>
        <item>T7</item>
        <item>T8</item>
        <item>T9</item>
        <item>T10</item>
        <item>T11</item>
        <item>T12</item>
        <item>T13</item>
        <item>T14</item>
        <item>T15</item>
        <item>T16</item>
        <item>T17</item>
        <item>T18</item>
        <item>T19</item>
        <item>T20</item>
    </string-array>

    <string-array name="doubleThrows">
        <item>-</item>
        <item>D1</item>
        <item>D2</item>
        <item>D3</item>
        <item>D4</item>
        <item>D5</item>
        <item>D6</item>
        <item>D7</item>
        <item>D8</item>
        <item>D9</item>
        <item>D10</item>
        <item>D11</item>
        <item>D12</item>
        <item>D13</item>
        <item>D14</item>
        <item>D15</item>
        <item>D16</item>
        <item>D17</item>
        <item>D18</item>
        <item>D19</item>
        <item>D20</item>
        <item>D25</item>
    </string-array>




</resources>